Fix(translation):Fixed typo

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -28,7 +28,7 @@
       },
       {
         "icon": "lack-of-guidance-icon",
-        "title": "😵‍💫 Manque de conseils technique",
+        "title": "😵‍💫 Manque de conseils techniques",
         "description": "Sans les bons conseils, naviguer dans les difficultés du développement technologique peut être écrasant."
       }
     ]
